--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,7 +2,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle= My Bank Details
+appTitle= Yaswanth Bank Details
 
 #YDES: Application description
 appDescription=Display Employee Bank Details
